[project]
name = "diagrammer"
version = "0.1.0"
description = "Diagramador de HQs"
authors = [
    { name = "Nicolas Albuquerque Ramos", email = "nicolas.albu@outlook.com" }
]
dependencies = []
readme = "README.md"
requires-python = "== 3.12.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["diagrammer"]
